Include links in content, minor cosmetic updates

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 			<li><a href="#projects">Projects</a></li>
 			<li><a href="#contact">Contact</a></li>
 	</div>
-	<content>
+	<div id="content-wrapper">
 		<section id="about">
 			<h1>Howdy, I'm Guy.</h1>
 
-			<p> I'm an undergraduate at UC Berkeley studying molecular & cell biology and mathematics. Aside from academics, I have various interests including spelunking, sci-fi, and running. I very rarely will write [things](https://medium.com/addiction-unscripted/down-the-rabbit-hole-96b121a3bfc5). I think this is where I'm supposed to refocus on work after showing how I'm human. </p>
+			<p> I'm an undergraduate at UC Berkeley studying molecular & cell biology and mathematics. Aside from academics, I have various interests including spelunking, sci-fi, and running. I very rarely will write <a href="https://medium.com/addiction-unscripted/down-the-rabbit-hole-96b121a3bfc5">things</a>. I think this is where I'm supposed to refocus on work after showing how I'm human. </p>
 
 			<h2> Moving on. </h2>
 
 			<p> Saunders Mac Lane, a mathematician deeply involved in the creation of category theory, once described his work as "abstract nonsense." I think I fall roughly in the same boat as far as my specific interests but with some hope of ultimate salvation. </p>
 
-			<p> I'm deeply fascinated by the field of algebraic topology and its applications in data analysis, especially in the realm of neuroscience. This includes machinery developed for studying structural features of data, such as [persistent homology](https://www.youtube.com/watch?v=h0bnG1Wavag), as well as theoretical considerations and limitationsarising in tools commonly used for studying biological data (e.g I love [this piece](http://colah.github.io/posts/2014-03-NN-Manifolds-Topology/)). As far as biology, I'm fascinated by oscillatory networks in the brain and their circuit and cellular origins. I currently work in the Knight Lab as an undergraduate research assistant where I'm studying neural oscillations and their role in organizing activity and behavior.  </p>
+			<p> I'm deeply fascinated by the field of algebraic topology and its applications in data analysis, especially in the realm of neuroscience. This includes machinery developed for studying structural features of data, such as <a href="https://www.youtube.com/watch?v=h0bnG1Wavag">persistent homology</a>, as well as theoretical considerations and limitationsarising in tools commonly used for studying biological data (e.g I love <a href="http://colah.github.io/posts/2014-03-NN-Manifolds-Topology/">this piece</a>). As far as biology, I'm fascinated by oscillatory networks in the brain and their circuit and cellular origins. I currently work in the Knight Lab as an undergraduate research assistant where I'm studying neural oscillations and their role in organizing activity and behavior.  </p>
 		</section>
 		<section id="projects">
 			<h1>Projects</h1>
@@ -47,7 +47,7 @@
 				<li><a href="https://github.com/guyhwilson">Github</a></li>
 			</ul>
 		</section>
-	</content>
+	</div>
 
 
 </body>
