--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	</div>
 	<div class="nav">
 		<ul>
-			<li><a href="#about">About</a></li>
-			<li><a href="#projects">Projects</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="index.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="contact.html">Contact</a></li>
 	</div>
 	<div id="content-wrapper">
 		<section id="about">
@@ -27,28 +27,6 @@
 
 			<p> I'm deeply fascinated by the field of algebraic topology and its applications in data analysis, especially in the realm of neuroscience. This includes machinery developed for studying structural features of data, such as <a href="https://www.youtube.com/watch?v=h0bnG1Wavag">persistent homology</a>, as well as theoretical considerations and limitationsarising in tools commonly used for studying biological data (e.g I love <a href="http://colah.github.io/posts/2014-03-NN-Manifolds-Topology/">this piece</a>). As far as biology, I'm fascinated by oscillatory networks in the brain and their circuit and cellular origins. I currently work in the Knight Lab as an undergraduate research assistant where I'm studying neural oscillations and their role in organizing activity and behavior.  </p>
 		</section>
-		<section id="projects">
-			<h1>Projects</h1>
-			<ul>
-				<li><a href="assets/stuff/cryoEM.pdf">Protein structure determination project</a><br>*note: was somehow even more young and naive than current self when I worked on this project. It’s bound to have some errors so be forewarned (also, lemme know if you see any!)</li>
-				<li><a href="assets/stuff/hodgelaplacian.pdf">Bounds, Boundaries, and Betti Numbers, Oh My! The Role of Hodge Theory in Laplacian Matrices and Computational Homology</a></li>
-				<li><a href="assets/stuff/ph_classification.pdf">Persistent Homology of Global Functional Connectivity for Depression Classification</a></li>
-			</ul>
-			<h2>Publications</h2>
-			<ul>
-				<li><a href="http://www.pnas.org/content/114/35/9457.short">Prefrontal cortex modulates posterior alpha oscillations during top-down guided visual perception</a></li>
-			</ul>
-		</section>
-		<section id="contact">
-			<h1>Contact</h1>
-			If you'd like, contact me at <a href="mailto:gwilson18@berkeley.edu">gwilson18@berkeley.edu</a>.
-			<ul>
-				<li><a href="https://www.linkedin.com/in/guy-wilson">LinkedIn</a></li>
-				<li><a href="https://github.com/guyhwilson">Github</a></li>
-			</ul>
-		</section>
 	</div>
-
-
 </body>
 </html>
